fixed dependencies and refactored utils

--- a/notebooks/data_processing.ipynb
+++ b/notebooks/data_processing.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-10-02T15:20:30.522760Z",
@@ -26,7 +26,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Maryia_Ivanina\\AppData\\Local\\Continuum\\anaconda3\\envs\\cornell\\lib\\site-packages\\gensim\\utils.py:1209: UserWarning: detected Windows; aliasing chunkize to chunkize_serial\n",
+      "C:\\Users\\Maryia_Ivanina\\Anaconda3\\envs\\cornell\\lib\\site-packages\\gensim\\utils.py:1209: UserWarning: detected Windows; aliasing chunkize to chunkize_serial\n",
       "  warnings.warn(\"detected Windows; aliasing chunkize to chunkize_serial\")\n"
      ]
     }
@@ -56,7 +56,7 @@
     "from text_processing import text_normalizer\n",
     "text_normalizer = reload(text_normalizer)\n",
     "from text_processing import duplicate_finder\n",
-    "from utilities import excel_writer, excel_reader\n",
+    "from utilities import excel_writer, excel_reader, utils\n",
     "from text_processing import abbreviations_resolver\n",
     "abbreviations_resolver = reload(abbreviations_resolver)\n",
     "\n",
@@ -66,118 +66,6 @@
     "\n",
     "_abbreviations_resolver = abbreviations_resolver.AbbreviationsResolver([])\n",
     "_abbreviations_resolver.load_model(\"../model/abbreviations_dicts\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import f1_score\n",
-    "from text_processing import text_normalizer\n",
-    "from interventions_labeling_lib import intervention_labeling\n",
-    "from interventions_labeling_lib import usaid_intervention_labels\n",
-    "from text_processing import text_normalizer\n",
-    "\n",
-    "def get_f1_score_test_data(test_data, intervention_labeler):\n",
-    "    res_pred, res_prob = intervention_labeler.predict_class(test_data.values, return_probs=True)\n",
-    "    res_true = test_data[\"Label\"].values\n",
-    "    return f1_score(res_true, res_pred, average=\"macro\")\n",
-    "\n",
-    "def get_f1_multi_label(test_labels, y_true, max_label=12):\n",
-    "    final_res = []\n",
-    "    for i in range(len(test_labels)):\n",
-    "        identified_labels = set()\n",
-    "        for j in range(len(test_labels[0])):\n",
-    "            if test_labels[i][j] >= 0.5:\n",
-    "                identified_labels.add(j+1)\n",
-    "        if not identified_labels:\n",
-    "            identified_labels.add(max_label)\n",
-    "        final_res.append(identified_labels)\n",
-    "    print(len(final_res), len(y_true))\n",
-    "    cnt = 0\n",
-    "    cnt_precision = 0\n",
-    "    cnt_recall = 0\n",
-    "    cnt_f1 = 0\n",
-    "    cnt_all_found = 0\n",
-    "    for idx, res in enumerate(y_true):\n",
-    "        cnt += 1\n",
-    "        cnt_intersect = len(y_true[idx].intersection(final_res[idx]))\n",
-    "        cnt_correct = len(y_true[idx])\n",
-    "        cnt_found = len(final_res[idx])\n",
-    "        precision = 0 if cnt_found == 0 else (cnt_intersect/cnt_found)\n",
-    "        recall = 0 if cnt_correct == 0 else (cnt_intersect/cnt_correct)\n",
-    "        f1 = 0\n",
-    "        if (precision + recall) > 0:\n",
-    "            f1 = 2*precision*recall/(precision + recall)\n",
-    "        cnt_precision += precision\n",
-    "        cnt_recall += recall\n",
-    "        if recall > 0.99:\n",
-    "            cnt_all_found += 1\n",
-    "        cnt_f1 += f1\n",
-    "    return cnt_f1/cnt\n",
-    "\n",
-    "def get_accuracy_multi_label(test_labels, y_true, max_label=12):\n",
-    "    final_res = []\n",
-    "    for i in range(len(test_labels)):\n",
-    "        identified_labels = set()\n",
-    "        for j in range(len(test_labels[0])):\n",
-    "            if test_labels[i][j] >= 0.5:\n",
-    "                identified_labels.add(j+1)\n",
-    "        if not identified_labels:\n",
-    "            identified_labels.add(max_label)\n",
-    "        final_res.append(identified_labels)\n",
-    "    cnt = 0\n",
-    "    cnt_precision = 0\n",
-    "    cnt_recall = 0\n",
-    "    cnt_f1 = 0\n",
-    "    cnt_all_found = 0\n",
-    "    for idx, res in enumerate(y_true):\n",
-    "        cnt += 1\n",
-    "        cnt_intersect = len(y_true[idx].intersection(final_res[idx]))\n",
-    "        cnt_correct = len(y_true[idx])\n",
-    "        cnt_found = len(final_res[idx])\n",
-    "        precision = 0 if cnt_found == 0 else (1 if cnt_intersect > 0 else 0)\n",
-    "        recall = 0 if cnt_correct == 0 else (1 if cnt_intersect > 0 else 0)\n",
-    "        f1 = 0\n",
-    "        if (precision + recall) > 0:\n",
-    "            f1 = 2*precision*recall/(precision + recall)\n",
-    "        cnt_precision += precision\n",
-    "        cnt_recall += recall\n",
-    "        if recall > 0.99:\n",
-    "            cnt_all_found += 1\n",
-    "        cnt_f1 += f1\n",
-    "    return cnt_f1/cnt\n",
-    "\n",
-    "def normalize_full(text):\n",
-    "    return \" \".join(sorted(text_normalizer.normalize_sentence(text).split(\" \")))\n",
-    "\n",
-    "def deduplicate(dfs):\n",
-    "    dicts = {}\n",
-    "    deduplicated_df_data = []\n",
-    "    for df in dfs:\n",
-    "        for i in range(len(df)):\n",
-    "            processed = normalize_full(df[\"Narrow concept\"].values[i])\n",
-    "            if processed not in dicts:\n",
-    "                dicts[processed] = set()\n",
-    "                deduplicated_df_data.append(\n",
-    "                    (df[\"Narrow concept\"].values[i], df[\"Broad concepts\"].values[i], df[\"Label\"].values[i]))\n",
-    "            dicts[processed].add(df[\"Label\"].values[i])\n",
-    "    return dicts, pd.DataFrame(deduplicated_df_data, columns=[\"Narrow concept\", \"Broad concepts\", \"Label\"])\n",
-    "\n",
-    "def print_per_label_stats(test_res, res_label):\n",
-    "    from sklearn.metrics import f1_score\n",
-    "    f1_score_ = 0.0\n",
-    "    total_cnt = 0\n",
-    "    for idx, label in enumerate(labels):\n",
-    "        print(label)\n",
-    "        test_y = [1 if (idx+1) in test_res[i] else 0 for i in range(len(test_res))]\n",
-    "        res_y = [res_label[i][idx] for i in range(len(test_res))]\n",
-    "        _outcomes_sentence_labeler.print_summary(test_y, res_y)\n",
-    "        f1_score_ += f1_score(test_y, res_y, average=\"macro\")\n",
-    "        total_cnt += 1\n",
-    "    print(\"Average \", f1_score_/total_cnt if total_cnt > 0 else 0)"
    ]
   },
   {
@@ -530,7 +418,7 @@
     "\n",
     "train_df = excel_reader.ExcelReader().read_folder(\"../tmp/usaid_water\")\n",
     "train_df[\"Label\"] = [usaid_intervention_labels.USAIDInterventionLabels.INTERVENTION_LABEL_TO_NUMBER[train_df[\"Label\"].values[i]] for i in range(len(train_df))]\n",
-    "deduplicated2labels, train_df = deduplicate([train_df])\n",
+    "deduplicated2labels, train_df = utils.deduplicate([train_df])\n",
     "print(train_df[\"Label\"].value_counts())\n",
     "len(train_df)"
    ]
@@ -1332,7 +1220,7 @@
     "    train_copy = train_data.copy()\n",
     "    train_copy[\"label\"] = \"\"\n",
     "    for i in range(len(train_copy)):\n",
-    "        real_labels = deduplicated2labels[normalize_full(train_copy[\"Narrow concept\"].values[i])]\n",
+    "        real_labels = deduplicated2labels[utils.normalize_full(train_copy[\"Narrow concept\"].values[i])]\n",
     "        real_labels_idx = []\n",
     "        for idx in range(1, 12):\n",
     "            real_labels_idx.append(int(idx in real_labels))\n",
@@ -1346,8 +1234,8 @@
     "\n",
     "res_prob, res_label, _ = _intervention_labeler.predict_for_df(test_copy)\n",
     "\n",
-    "print(\"F1 measure: \", get_f1_multi_label(res_prob, [deduplicated2labels[normalize_full(test_copy[\"Narrow concept\"].values[i])] for i in range(len(test_data))]))\n",
-    "print(\"Accuracy: \",get_accuracy_multi_label(res_prob, [deduplicated2labels[normalize_full(test_copy[\"Narrow concept\"].values[i])] for i in range(len(test_data))]))"
+    "print(\"F1 measure: \", utils.get_f1_multi_label(res_prob, [deduplicated2labels[utils.normalize_full(test_copy[\"Narrow concept\"].values[i])] for i in range(len(test_data))]))\n",
+    "print(\"Accuracy: \", utils.get_accuracy_multi_label(res_prob, [deduplicated2labels[utils.normalize_full(test_copy[\"Narrow concept\"].values[i])] for i in range(len(test_data))]))"
    ]
   },
   {
@@ -1509,7 +1397,7 @@
     "            pred.append(0)\n",
     "    real_label = []\n",
     "    for j in range(len(test_copy)):\n",
-    "        if (i+1) in deduplicated2labels[normalize_full(test_copy[\"Narrow concept\"].values[j])]:\n",
+    "        if (i+1) in deduplicated2labels[utils.normalize_full(test_copy[\"Narrow concept\"].values[j])]:\n",
     "            real_label.append(1)\n",
     "        else:\n",
     "            real_label.append(0)\n",
@@ -5523,10 +5411,10 @@
    "source": [
     "res_prob, res_label, _ = _outcomes_sentence_labeler.predict_for_df(test_df)\n",
     "\n",
-    "print(\"F1 measure(multilabel): \", get_f1_multi_label(res_prob, test_res, max_label=len(labels)+1))\n",
-    "print(\"Accuracy(multilabel): \",get_accuracy_multi_label(res_prob, test_res, max_label=len(labels)+1))\n",
+    "print(\"F1 measure(multilabel): \", utils.get_f1_multi_label(res_prob, test_res, max_label=len(labels)+1))\n",
+    "print(\"Accuracy(multilabel): \", utils.get_accuracy_multi_label(res_prob, test_res, max_label=len(labels)+1))\n",
     "print(\"Per label statistics\")\n",
-    "print_per_label_stats(test_res, res_label)"
+    "utils.print_per_label_stats(test_res, res_label, _outcomes_sentence_labeler)"
    ]
   },
   {
@@ -7841,7 +7729,7 @@
     "test_data = pd.DataFrame(test_data, columns=[\"Narrow concept\", \"Broad concepts\", \"Label\"])\n",
     "\n",
     "test_data[\"Label\"] = [usaid_intervention_labels.USAIDInterventionLabels.INTERVENTION_LABEL_TO_NUMBER[test_data[\"Label\"].values[i]] for i in range(len(test_data))]\n",
-    "deduplicated2labels = deduplicate([test_data])\n",
+    "deduplicated2labels = utils.deduplicate([test_data])\n",
     "\n",
     "intervention_labeling = reload(intervention_labeling)\n",
     "intervention_labeler = intervention_labeling.InterventionLabeling(google_models_folder=\"../model/synonyms_retrained_new\",\n",
@@ -7852,14 +7740,14 @@
     "    if label != 10:\n",
     "        print(\"#### \", usaid_intervention_labels.USAIDInterventionLabels.INTERVENTION_NUMBER_TO_LABEL[label])\n",
     "        test_copy = test_data.copy()\n",
-    "        test_copy[\"Label\"] = [1 if label in deduplicated2labels[normalize_full(test_copy[\"Narrow concept\"].values[i])] else 2 for i in range(len(test_copy))]\n",
+    "        test_copy[\"Label\"] = [1 if label in deduplicated2labels[utils.normalize_full(test_copy[\"Narrow concept\"].values[i])] else 2 for i in range(len(test_copy))]\n",
     "        label_folder = os.path.join(common_folder, usaid_intervention_labels.USAIDInterventionLabels.INTERVENTION_NUMBER_TO_LABEL[label])\n",
     "        intervention_labeler.load_previous_models(label_folder)\n",
     "        res_label, res_prob = intervention_labeler.predict_class(test_copy.values, return_probs=True)\n",
     "        test_labels.append([r[0] for r in res_prob])\n",
     "\n",
-    "print(\"F1 measure: \", get_f1_multi_label(test_labels, [deduplicated2labels[normalize_full(test_copy[\"Narrow concept\"].values[i])] for i in range(len(test_data))]))\n",
-    "print(\"Accuracy: \",get_accuracy_multi_label(test_labels, [deduplicated2labels[normalize_full(test_copy[\"Narrow concept\"].values[i])] for i in range(len(test_data))]))"
+    "print(\"F1 measure: \", utils.get_f1_multi_label(test_labels, [deduplicated2labels[utils.normalize_full(test_copy[\"Narrow concept\"].values[i])] for i in range(len(test_data))]))\n",
+    "print(\"Accuracy: \", utils.get_accuracy_multi_label(test_labels, [deduplicated2labels[utils.normalize_full(test_copy[\"Narrow concept\"].values[i])] for i in range(len(test_data))]))"
    ]
   },
   {
