--- a/notebooks/data_processing.ipynb
+++ b/notebooks/data_processing.ipynb
@@ -59,6 +59,9 @@
     "from utilities import excel_writer, excel_reader, utils\n",
     "from text_processing import abbreviations_resolver\n",
     "abbreviations_resolver = reload(abbreviations_resolver)\n",
+    "from sklearn.metrics import f1_score\n",
+    "from interventions_labeling_lib import intervention_labeling\n",
+    "from interventions_labeling_lib import usaid_intervention_labels\n",
     "\n",
     "stemmer = SnowballStemmer(\"english\")\n",
     "lmtzr = WordNetLemmatizer()\n",
