added the description for columns with PICOS

--- a/notebooks/Sample data processing.ipynb
+++ b/notebooks/Sample data processing.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6475d512",
+   "id": "40041077",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f717b24",
+   "id": "81220b5a",
    "metadata": {},
    "source": [
     "# Load dataset"
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "11fcb702",
+   "id": "9af9c19b",
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6eae062a",
+   "id": "f640780a",
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0e8e0e4",
+   "id": "af725770",
    "metadata": {},
    "source": [
     "# Data cleaning and processing"
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4c4d027f",
+   "id": "7b0e9705",
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1f487f78",
+   "id": "38390d90",
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "ba028556",
+   "id": "6c5eb5c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "5af0c031",
+   "id": "84fcf2ae",
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89feaa65",
+   "id": "24cf9bbb",
    "metadata": {},
    "source": [
     "# Enriching the dataset with different extraction/classification parts"
@@ -382,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "ac7b4018",
+   "id": "0da1be16",
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "33d8c4cd",
+   "id": "8757a142",
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "aac67c76",
+   "id": "08e213d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,9 +443,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d3b4cce8",
+   "metadata": {},
+   "source": [
+    "## Data extraction\n",
+    "Columns in which PICOS can be found\n",
+    "Population - population tags, gender_age_population_tags\n",
+    "Intervention - interventions_found(using our taxonomy), extracted_interventions(using NER model for intervention extraction + classification, done for previous work for USAID)\n",
+    "Countries - countries_mentioned, geo_regions, world_bankdivision_regions, provinces, districts\n",
+    "Outcomes - outcomes_found\n",
+    "Study design type - study_type"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "a8276337",
+   "id": "67f1b5c8",
    "metadata": {},
    "outputs": [
     {
@@ -3068,7 +3082,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "2285eff4",
+   "id": "af4eda47",
    "metadata": {},
    "outputs": [
     {
@@ -3777,9 +3791,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2d13af63",
+   "metadata": {},
+   "source": [
+    "## Extracting countries from affiliation information\n",
+    "The column \"affilaition_countries_mentioned\" contains countries extracted from the \"raw_affiliation\" column"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "492f6a18",
+   "id": "c041417d",
    "metadata": {},
    "outputs": [
     {
@@ -3823,7 +3846,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "3a19d879",
+   "id": "11b5279f",
    "metadata": {},
    "outputs": [
     {
